--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 	<meta charset="utf-8">
 	<title>Shop</title>
 
-	<script id="sap-ui-bootstrap"
-		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_belize"
-		data-sap-ui-resourceroots='{
+	<script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_belize" data-sap-ui-resourceroots='{
 			"shop": "./"
-		}'
-		data-sap-ui-compatVersion="edge"
-		data-sap-ui-async="true"
+		}' data-sap-ui-compatVersion="edge" data-sap-ui-async="true"
 		data-sap-ui-onInit="module:sap/ui/core/ComponentSupport">
 		</script>
 
@@ -25,11 +21,7 @@
 </head>
 
 <body class="sapUIBody" id="content">
-	<div data-sap-ui-component
-		data-name="shop"
-		data-height="100%"
-		data-id="container"
-		data-settings='{"id" : "shop"}'
+	<div data-sap-ui-component data-name="shop" data-height="100%" data-id="container" data-settings='{"id" : "shop"}'
 		style="height: 100%">
 	</div>
 </body>
